레포지토리와 서비스에 JPA 도입