@@ -4,28 +4,33 @@ import com.sprint.mission.discodeit.entity.*;
 import com.sprint.mission.discodeit.entity.dto.channelDto.*;
 import com.sprint.mission.discodeit.entity.entityType.ChannelType;
 import com.sprint.mission.discodeit.exception.NotFoundChannelException;
+import com.sprint.mission.discodeit.exception.NotFoundUserException;
 import com.sprint.mission.discodeit.repository.*;
 import com.sprint.mission.discodeit.service.*;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Transactional
 public class BasicChannelService implements ChannelService {
 
+    private final UserRepository userRepository;
     private final ChannelRepository channelRepository;
     private final ReadStatusRepository readStatusRepository;
     private final MessageRepository messageRepository;
 
     private ChannelDto toDto(Channel channel) {
 
-        Optional<Message> lastMessage = messageRepository.findTopByChannelId(channel.getId());
+        Optional<Message> lastMessage = messageRepository.findTopByChannelIdOrderByCreatedAtDesc(channel.getId());
 
         List<UUID> participantIds = readStatusRepository.findAllByChannelId(channel.getId())
-                .stream().map(ReadStatus::getUserId).toList();
+                .stream().map(readStatus -> readStatus.getUser().getId())
+                .collect(Collectors.toList());
 
         return ChannelDto.from(channel, participantIds, lastMessage.orElse(null));
     }
@@ -49,10 +54,13 @@ public class BasicChannelService implements ChannelService {
 
         Channel newChannel = new Channel(ChannelType.PRIVATE);
         channelRepository.save(newChannel);
+
         if (requestDto.getParticipantIds() != null && !requestDto.getParticipantIds().isEmpty()) {
 
             for (UUID userId : requestDto.getParticipantIds()) {
-                readStatusRepository.save(new ReadStatus(userId, newChannel.getId()));
+                User user = userRepository.findById(userId)
+                        .orElseThrow(() -> new NotFoundUserException("사용자를 찾을 수 없습니다."));
+                readStatusRepository.save(new ReadStatus(user, newChannel));
             }
         }
         return newChannel;
@@ -73,7 +81,8 @@ public class BasicChannelService implements ChannelService {
 
         // 유저 수신 정보로부터 채널Id 가져오기
         Set<UUID> myChannelIds = readStatusRepository.findAllByUserId(userId)
-                .stream().map(ReadStatus::getChannelId).collect(Collectors.toSet());
+                .stream().map(readStatus -> readStatus.getChannel().getId())
+                .collect(Collectors.toSet());
 
         return allChannels.stream().filter(channel -> {
                     if (channel.getType() == ChannelType.PUBLIC) {
@@ -96,11 +105,9 @@ public class BasicChannelService implements ChannelService {
             throw new IllegalStateException("PRIVATE 채널은 수정할 수 없습니다.");
         }
 
-        channel.updateChannelName(updateDto.newName());
+        channel.updateChannelInfo(updateDto.newName(), updateDto.newDescription());
 
-        channel.updateChannelDescription(updateDto.newDescription());
         channelRepository.save(channel);
-
         return channel;
 
     }
@@ -111,9 +118,7 @@ public class BasicChannelService implements ChannelService {
         channelRepository.findById(id)
                         .orElseThrow(() -> new NotFoundChannelException("채널을 찾을 수 없습니다."));
 
-            readStatusRepository.deleteAllByChannelId(id);
-            messageRepository.deleteAllByChannelId(id);
-            channelRepository.deleteById(id);
+        channelRepository.deleteById(id);
 
     }
 }
